src/test/deca/syntax/valid/sansObjet/35_declVarIdentThis.deca
/* Description:
    Test du programme sur utilisation de
      decl_var-->asign_expr-->Ident = Literal ( this)



     Historique:
        cree le 13/01/2020
*/

{
        int y = z = this;
}
